# KernalForge

./: .gitignore  ARCHITECTURE_DIAGRAM.md  README.md  advanced_ranker.py  advanced_real_search.py  autoopt.py  autoopt_real.py  bench.py  bench_real.py  kernel.py  program.md  program_real.md  pyproject.toml  real_problem_suite.py  report_experiment.py  structured_search.py  summary_tables.py
real_problems/causal_conv1d_py/: submission.py
real_problems/fp8_quant_py/: submission.py
real_problems/gated_deltanet_chunk_fwd_h_py/: submission.py
real_problems/gated_deltanet_chunk_fwd_o_py/: submission.py
real_problems/gated_deltanet_recompute_w_u_py/: submission.py
